# pynmm

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: demo.py  morris_textual.py
src/artifitial_inteligence/: __init__.py  board.py  enums.py  eval_settings.py  game_controller.py  game_node.py  move.py  position.py
src/artifitial_inteligence/enums/: __init__.py  board_index.py  game_state.py  move_type.py  player.py
src/artifitial_inteligence/models/: __init__.py  eval_settings.py  game_node.py  move.py  position.py
src/pynmm/: __init__.py  __main__.py  tui.py  tui_app.py  tui_render.py  tui_session.py
